--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <div class="head clearfix">
     <div class="hod-div-top ">
         <div class="col-2"><i class=" iconfont ">&#xe600;</i></div>
-        <div class="col-5 col-offset-1">
-            <div class="col-4 active">商品</div>
-            <div class="col-4">详情</div>
-            <div class="col-4">评价</div>
+        <div class="col-5 col-offset-1" >
+            <div class="col-4 active" id="sp">商品</div>
+            <div class="col-4" id="xq">详情</div>
+            <div class="col-4" id="pj">评价</div>
         </div>
 
         <div class="col-1 col-offset-2 "><i class=" iconfont">&#xe648;</i></div>
